# NSGA-2

./: .gitignore  CMakeLists.txt  Crossover.cpp  Crossover.hpp  Debug.cpp  Debug.hpp  Export.cpp  Export.hpp  Help.cpp  Help.hpp  Mutator.cpp  Mutator.hpp  NSGA.cpp  NSGA.hpp  Problem.hpp  code description that is important  main.cpp  possible opt  stuff to do
plot/: plot.py
